2002-03-17  Kevin Vandersloot <kfv101@psu.edu>

	* logview.c: fix typo. Fixes bug 75125

2002-03-04  Kevin Vandersloot <kfv101@psu.edu>
	
	* log_repaint.c: show details on double click and 
	select row on single click. Also handle mouse scroll
	events. 

	* logview.c: don't select row on motion events.

2002-02-28  Santhana Krishnan  <santhana.krishnan@wipro.com>

	* logview.c: fixed bug on scroll bars when log view is empty. 

2002-02-21  Bastien Nocera  <hadess@hadess.net>

	* logrtns.c: (isLogFile): don't crash on empty files

2002-02-21  Bastien Nocera  <hadess@hadess.net>

	* actions.c: (edit_action_entry): use non-deprecated calls
	(and the proper ones in fact)
	* logview.h, logrtns.c: (ReadPageUp), (ReadPageDown): fix bug on
	platforms where a char is unsigned (Closes:68013)
	(patch from Jochen Voss <voss@debian.org>)
	* logview.c: (CloseApp): fix double-closing exit core dump

2002-01-31  Zbigniew Chyla  <cyba@gnome.pl>

	* about.c (AboutShowWindow): Don't try to translate empty string.

2001-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* .cvsignore: s/logview/gnome-system-log/

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-system-log-actions.db:
	* gnome-system-log-descript.db:
	* gnome-system-log-pam:
	* gnome-system-log-regexp.db:
	* gnome-system-log-security.in:
	* gnome-system-log.1:
	* gnome-system-log.desktop.in:
	* logview-actions.db:
	* logview-descript.db:
	* logview-pam:
	* logview-regexp.db:
	* logview-security.in:
	* logview.1:
	* logview.c: (open_databases):
	* logview.desktop.in:
	* pixmaps/Makefile.am:


	Rename application binary to match menu name.

	Whew. This one was a PITA.
	
2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* logview.desktop.in:

	Change menu names to conform with the HIG, and
	install into the GNOME2 .desktop file location.
