@@ -1,3 +1,9 @@
+2002-03-18  Kevin Vandersloot <kfv101@psu.edu> 
+
+	* logview.c: fix checks for logfiles. Thanks to Aruna Pourohit
+	for pointing this out. Realy fixes bug 75125. Also update
+	binary name in gnome_init
+
 2002-03-17  Kevin Vandersloot <kfv101@psu.edu>
 
 	* logview.c: fix typo. Fixes bug 75125
